@@ -92,6 +92,8 @@
 // ZAP: 2022/08/23 Use SiteMap#createTree to create a new Sites Tree when loading a session.
 // ZAP: 2022/09/21 Use format specifiers instead of concatenation when logging.
 // ZAP: 2023/01/10 Tidy up logger.
+// ZAP: 2023/05/21 Allow context import functionality to accept an XML config as input (Issue 7421).
+// ZAP: 2023/06/02 Allow to set the global exclude URLs.
 package org.parosproxy.paros.model;
 
 import java.awt.EventQueue;
@@ -100,7 +102,6 @@ import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.security.InvalidParameterException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -108,6 +109,7 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeSet;
+import java.util.function.Supplier;
 import java.util.regex.Pattern;
 import javax.swing.tree.TreeNode;
 import org.apache.commons.configuration.ConfigurationException;
@@ -168,6 +170,8 @@ public class Session {
 
     private ParameterParser defaultParamParser = new StandardParameterParser();
 
+    private Supplier<List<String>> globalExcludedUrlsSupplier;
+
     /**
      * Constructor for the current session. The current system time will be used as the session ID.
      *
@@ -217,20 +221,30 @@ public class Session {
         discardContexts();
     }
 
-    /** @return Returns the sessionDesc. */
+    /**
+     * @return Returns the sessionDesc.
+     */
     public String getSessionDesc() {
         return sessionDesc;
     }
 
-    /** @return Returns the sessionId. */
+    /**
+     * @return Returns the sessionId.
+     */
     public long getSessionId() {
         return sessionId;
     }
-    /** @return Returns the name. */
+
+    /**
+     * @return Returns the name.
+     */
     public String getSessionName() {
         return sessionName;
     }
-    /** @return Returns the siteTree. */
+
+    /**
+     * @return Returns the siteTree.
+     */
     public SiteMap getSiteTree() {
         return siteTree;
     }
@@ -693,19 +707,26 @@ public class Session {
         model.snapshotSessionDb(this.fileName, fileName);
     }
 
-    /** @param sessionDesc The sessionDesc to set. */
+    /**
+     * @param sessionDesc The sessionDesc to set.
+     */
     public void setSessionDesc(String sessionDesc) {
         this.sessionDesc = sessionDesc;
         configuration.setProperty(SESSION_DESC, sessionDesc);
     }
 
-    /** @param sessionId The sessionId to set. */
+    /**
+     * @param sessionId The sessionId to set.
+     */
     public void setSessionId(long sessionId) {
         this.sessionId = sessionId;
         // setText(SESSION_ID, Long.toString(sessionId));
         configuration.setProperty(SESSION_ID, Long.toString(sessionId));
     }
-    /** @param name The name to set. */
+
+    /**
+     * @param name The name to set.
+     */
     public void setSessionName(String name) {
         this.sessionName = name;
         // setText(SESSION_NAME, name);
@@ -1110,8 +1131,26 @@ public class Session {
      * @since 2.3.0
      */
     public List<String> getGlobalExcludeURLRegexs() {
-        return Collections.unmodifiableList(
-                model.getOptionsParam().getGlobalExcludeURLParam().getTokensNames());
+        var supplier = globalExcludedUrlsSupplier;
+        if (supplier != null) {
+            var list = supplier.get();
+            if (list != null) {
+                return list;
+            }
+        }
+        return List.of();
+    }
+
+    /**
+     * Sets the supplier of global exclude URLs.
+     *
+     * <p><strong>Note:</strong> Not part of the public API.
+     *
+     * @param supplier the supplier of global exclude URLs.
+     * @since 2.13.0
+     */
+    public void setGlobalExcludedUrlRegexsSupplier(Supplier<List<String>> supplier) {
+        globalExcludedUrlsSupplier = supplier;
     }
 
     public void setSessionUrls(int type, List<String> urls) throws DatabaseException {
@@ -1487,11 +1526,43 @@ public class Session {
      *     empty or if a context with the same name already exists.
      */
     public Context importContext(File file)
-            throws ConfigurationException, ClassNotFoundException, InstantiationException,
-                    IllegalAccessException, IllegalArgumentException, InvocationTargetException,
-                    NoSuchMethodException, SecurityException {
-        ZapXmlConfiguration config = new ZapXmlConfiguration(file);
+            throws ConfigurationException,
+                    ClassNotFoundException,
+                    InstantiationException,
+                    IllegalAccessException,
+                    IllegalArgumentException,
+                    InvocationTargetException,
+                    NoSuchMethodException,
+                    SecurityException {
+        return importContext(new ZapXmlConfiguration(file));
+    }
 
+    /**
+     * Imports a context from the specified XML config.
+     *
+     * @param config the XML config that contains the context data
+     * @return the imported {@code Context}, already added to the session.
+     * @throws ConfigurationException
+     * @throws ClassNotFoundException
+     * @throws InstantiationException
+     * @throws IllegalAccessException
+     * @throws IllegalArgumentException
+     * @throws InvocationTargetException
+     * @throws NoSuchMethodException
+     * @throws SecurityException
+     * @throws IllegalContextNameException if context's name is not provided or it's empty or if a
+     *     context with the same name already exists.
+     * @since 2.13.0
+     */
+    public Context importContext(ZapXmlConfiguration config)
+            throws ConfigurationException,
+                    ClassNotFoundException,
+                    InstantiationException,
+                    IllegalAccessException,
+                    IllegalArgumentException,
+                    InvocationTargetException,
+                    NoSuchMethodException,
+                    SecurityException {
         String name = config.getString(Context.CONTEXT_CONFIG_NAME);
         validateContextName(name);
 
@@ -1722,13 +1793,17 @@ public class Session {
         return this.getFormParamParser(uri.toString()).parseParameters(formData);
     }
 
-    /** @deprecated use {@link SessionStructure#getTreePath(Model, URI)} */
+    /**
+     * @deprecated use {@link SessionStructure#getTreePath(Model, URI)}
+     */
     @Deprecated
     public List<String> getTreePath(URI uri) throws URIException {
         return SessionStructure.getTreePath(Model.getSingleton(), uri);
     }
 
-    /** @deprecated use {@link SessionStructure#getTreePath(Model, HttpMessage)} */
+    /**
+     * @deprecated use {@link SessionStructure#getTreePath(Model, HttpMessage)}
+     */
     @Deprecated
     public List<String> getTreePath(HttpMessage msg) throws URIException {
         return SessionStructure.getTreePath(Model.getSingleton(), msg);
